--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
 					<div class="carousel-item active">
 				    	<img class="d-block w-100 img-fluid img-slider" src="images/slider1.jpg" alt="First slide">
 				    	<div class="carousel-caption">
-						    <h2>Welcome!</h2>
+						    <h2>Neithal Sea Food Welcomes You!</h2>
 							<p>...</p>
 						</div>
 				    </div>
 				    <div class="carousel-item">
 				      	<img class="d-block w-100 img-fluid img-slider" src="images/slider2.jpg" alt="Second slide">
 				      	<div class="carousel-caption">
-						    <h2>Traditional Italian Cuisine</h2>
+						    <h2>Traditional Sea Food Cuisine</h2>
 							<p>...</p>
 						</div>
 				    </div>
 				    <div class="carousel-item">
 				      	<img class="d-block w-100 img-fluid img-slider" src="images/slider3.jpg" alt="Third slide">
 				      	<div class="carousel-caption">
-						    <h2>Selected Products</h2>
+						    <h2>Selected Fresh Sea Products</h2>
 							<p>...</p>
 						</div>
 				    </div>
