--- a/index.html
+++ b/index.html
@@ -85,45 +85,154 @@
 			<div class="row bg-light">
 				<div class="col-md-4" data-aos="slide-up">
 					<div class="card view zoom">
-  						<img class="card-img-top img-fluid " src="images/meat-menu.jpg">
+  						<img class="card-img-top img-fluid " src="images/fishdosa.jpg">
 					  	<div class="card-body">
-					  		<h5 class="card-title">~ Meat Menu ~</h5>
-					    	<ul class="list-group list-group-flush">
-							    <li class="list-group-item">Bocconcini di carne in nido di sfoglia</li>
-							    <li class="list-group-item">Bruschette con maiale al curry</li>
-							 	<li class="list-group-item">Uova al prosciutto</li>
-							 	<li class="list-group-item">Vitello tonnato</li>
-							 	<li class="list-group-item">Fesa di tacchino marinata con olive</li>
+					  		<h5 class="card-title">~ Morning Special ~</h5>
+					    	<ul style="clear: both;" class="list-group list-group-flush">
+							    <li class="list-group-item"> Idly Set <span class=" alignright">15</span></li>
+							    <li class="list-group-item"> Podi Dosa<span class=" alignright">25</span></li>
+							    <li class="list-group-item"> Malli Dosa<span class=" alignright">30</span></li>
+							    <li class="list-group-item"> Ghee Roast<span class=" alignright">40</span></li>
+							    <li class="list-group-item"> Tissue Dosa<span class=" alignright">40</span></li>
+							    <li class="list-group-item"> Puthina Dosa<span class=" alignright">30</span></li>
+							    <li class="list-group-item"> Uthappam<span class=" alignright">20</span></li>
+							    <li class="list-group-item"> Karupatti Dosa<span class=" alignright">60</span></li>
+							    <li class="list-group-item"> Idiyappam Set<span class=" alignright">50</span></li>
 							</ul>
 					  	</div>
 					</div>
 				</div>
 				<div class="col-md-4" data-aos="slide-up">
 					<div class="card">
+  						<img class="card-img-top img-fluid " src="images/fishcurry.jpg">
+					  	<div class="card-body">
+					  		<h5 class="card-title">~ Gravy Special ~</h5>
+					    	<ul class="list-group list-group-flush">
+							    <li class="list-group-item">Madurai Kara Kulambu<span class=" alignright">120</span></li>
+							    <li class="list-group-item">Hyderabad Kulambu<span class=" alignright">150</span></li>
+							 	<li class="list-group-item">Alleppy Fish Kulambu<span class=" alignright">130</span></li>
+							 	<li class="list-group-item">Fish Kulambu di<span class=" alignright">50</span></li>
+							 	<li class="list-group-item">Chettinad Fish Kulambu<span class=" alignright">100</span></li>
+							</ul>
+					  	</div>
+					</div>
+				</div>
+				<div class="col-md-4" data-aos="slide-up">
+					<div class="card">
+  						<img class="card-img-top img-fluid" src="images/fishrice.jpg">
+					  	<div class="card-body">
+					  		<h5 class="card-title">~ Lunch ~</h5>
+					    	<ul class="list-group list-group-flush">
+							    <li class="list-group-item">Fish Briyani<span class=" alignright">80</span></li>
+							    <li class="list-group-item">Prawn Briyani<span class=" alignright">120</span></li>
+							 	<li class="list-group-item">Crab Soup<span class=" alignright">50</span></li>
+							 	<li class="list-group-item">Vanjiram Briyani<span class=" alignright">120</span></li>
+							 	<li class="list-group-item">Crab Briyani<span class=" alignright">150</span></li>
+							 	<li class="list-group-item">Plain Briyani<span class=" alignright">50</span></li>
+							 	<li class="list-group-item">Meals<span class=" alignright">60</span></li>
+							</ul>
+					  	</div>
+					</div>
+				</div>
+				<div class="col-md-4" data-aos="slide-up">
+					<div class="card view zoom">
+  						<img class="card-img-top img-fluid " src="images/fishrice2.jpg">
+					  	<div class="card-body">
+					  		<h5 class="card-title">~ Evening Rice Special ~</h5>
+					    	<ul style="clear: both;" class="list-group list-group-flush">
+							    <li class="list-group-item">Fried Rice<span class=" alignright">50</span></li>
+							    <li class="list-group-item">Fish Rice<span class=" alignright">80</span></li>
+							 	<li class="list-group-item">Egg Rice<span class=" alignright">60</span></li>
+							 	<li class="list-group-item">Schezwan Rice<span class=" alignright">80</span></li>
+							 	<li class="list-group-item">Fish Noodles<span class=" alignright">80</span></li>
+							 	<li class="list-group-item">Egg Noodles<span class=" alignright">60</span></li>
+								 <li class="list-group-item">Appam Fish Kolambu<span class=" alignright">20</span></li>
+							 	<li class="list-group-item">Chappathi Set<span class=" alignright">30</span></li>
+							 	<li class="list-group-item">Fulka Set<span class=" alignright">30</span></li>								 
+							</ul>
+					  	</div>
+					</div>
+				</div>
+				<div class="col-md-4" data-aos="slide-up">
+					<div class="card view zoom">
+  						<img class="card-img-top img-fluid " src="images/cutlet.jpg">
+					  	<div class="card-body">
+					  		<h5 class="card-title">~ Kids Special ~</h5>
+					    	<ul style="clear: both;" class="list-group list-group-flush">
+							    <li class="list-group-item">Fish Samosa (5 nos) <span class=" alignright">50</span></li>
+							    <li class="list-group-item">Fish Cutlet (2 Nos) <span class=" alignright">50</span></li>
+							    <li class="list-group-item">French Fries (120 gms) <span class=" alignright">50</span></li>
+							    <li class="list-group-item">Fish Nugates (2 Nos) <span class=" alignright">50</span></li>
+							    <li class="list-group-item">Fish Finger (6 Nos)  <span class=" alignright">120</span></li>
+							    <li class="list-group-item">Prawn Butterflies (2 Nos) <span class=" alignright">60</span></li>
+							    <li class="list-group-item">Crab Lollypop (4 Nos)  <span class=" alignright">100</span></li>
+							</ul>
+					  	</div>
+					</div>
+				</div>
+				<div class="col-md-4" data-aos="slide-up">
+					<div class="card view zoom">
   						<img class="card-img-top img-fluid " src="images/fish-menu.jpg">
 					  	<div class="card-body">
-					  		<h5 class="card-title">~ Fish Menu ~</h5>
-					    	<ul class="list-group list-group-flush">
-							    <li class="list-group-item">Carpaccio di polpo</li>
-							    <li class="list-group-item">Cozze al verde</li>
-							 	<li class="list-group-item">Cocktail di gamberi</li>
-							 	<li class="list-group-item">Risotto alla crema di scampi</li>
-							 	<li class="list-group-item">Ravioli di pesce con crema di scampi</li>
+					  		<h5 class="card-title">~ Morning & Evening ~</h5>
+					    	<ul style="clear: both;" class="list-group list-group-flush">
+							    <li class="list-group-item">Fish Dosai <span class=" alignright">60</span></li>
+							    <li class="list-group-item">Prawn Dosai <span class=" alignright">80</span></li>
+							 	<li class="list-group-item">Egg Onion Dosai <span class=" alignright">50</span></li>
+							 	<li class="list-group-item">Fish Roast <span class=" alignright">80</span></li>
+							 	<li class="list-group-item">Prawn Roast <span class=" alignright">100</span></li>
 							</ul>
 					  	</div>
 					</div>
 				</div>
 				<div class="col-md-4" data-aos="slide-up">
-					<div class="card">
-  						<img class="card-img-top img-fluid" src="images/menu-vegetarian.jpg">
+					<div class="card view zoom">
+  						<img class="card-img-top img-fluid " src="images/fishroast.jpg">
 					  	<div class="card-body">
-					  		<h5 class="card-title">~ Vegetarian Menu ~</h5>
-					    	<ul class="list-group list-group-flush">
-							    <li class="list-group-item">Parmigiana di melanzane</li>
-							    <li class="list-group-item">Strudel con ricotta e spinaci</li>
-							 	<li class="list-group-item">Polpette di spinaci e ricotta</li>
-							 	<li class="list-group-item">Frittata di patate al forno</li>
-							 	<li class="list-group-item">Spaghetti con le polpettine vegetariane</li>
+					  		<h5 class="card-title">~ Roasted Specials ~</h5>
+					    	<ul style="clear: both;" class="list-group list-group-flush">
+							    <li class="list-group-item">Vanjaram (Round Piece)  <span class=" alignright">120</span></li>
+							    <li class="list-group-item">Prawn  <span class=" alignright">80</span></li>
+							    <li class="list-group-item">Nethili  <span class=" alignright">80</span></li>
+							    <li class="list-group-item">Kanava  <span class=" alignright">80</span></li>
+							    <li class="list-group-item">Paarai Small  <span class=" alignright">60</span></li>
+							    <li class="list-group-item">Paarai Medium  <span class=" alignright">80</span></li>
+							    <li class="list-group-item">Paarai Big  <span class=" alignright">120</span></li>
+							    <li class="list-group-item">Ooli Fish Small  <span class=" alignright">30</span></li>
+							    <li class="list-group-item">Ooli Fish Medium  <span class=" alignright">50</span></li>
+							    <li class="list-group-item">Ooli Fish Big  <span class=" alignright">70</span></li>
+							    <li class="list-group-item">Fish Chilli Boneless (100 grams)   <span class=" alignright">60</span></li>
+							    <li class="list-group-item">Fish Chilli (100 grams)   <span class=" alignright">40</span></li>
+							    <li class="list-group-item">Koduva Medium  <span class=" alignright">80</span></li>
+							    <li class="list-group-item">Koduva Big   <span class=" alignright">100</span></li>
+							</ul>
+					  	</div>
+					</div>
+				</div>
+				<div class="col-md-4" data-aos="slide-up">
+					<div class="card view zoom">
+  						<img class="card-img-top img-fluid " src="images/fishfry.jpg">
+					  	<div class="card-body">
+					  		<h5 class="card-title">~ Family Special ~</h5>
+					    	<ul style="clear: both;" class="list-group list-group-flush">
+							    <li class="list-group-item">Fish Polichathu  <span class=" alignright">180</span></li>
+							    <li class="list-group-item">Basha Tawa Special  <span class=" alignright">250</span></li>
+							    <li class="list-group-item">Ginger Fish <span class=" alignright">120</span></li>
+							    <li class="list-group-item">Garlic Fish <span class=" alignright">120</span></li>
+							    <li class="list-group-item">Fish Pallipalayam <span class=" alignright">100</span></li>
+							    <li class="list-group-item">Fish Chinthamani <span class=" alignright">120</span></li>
+							    <li class="list-group-item">Fish Maharani <span class=" alignright">120</span></li>
+							    <li class="list-group-item">Lemon Fish <span class=" alignright">100</span></li>
+							    <li class="list-group-item">Prawn Pepper Fry <span class=" alignright">150</span></li>
+							    <li class="list-group-item">Prawn Pallipalayam <span class=" alignright">120</span></li>
+							    <li class="list-group-item">Prawn Maharani <span class=" alignright">130</span></li>
+							    <li class="list-group-item">Fish Manchurian <span class=" alignright">100</span></li>
+							    <li class="list-group-item">Prawn Manchurian <span class=" alignright">130</span></li>
+							    <li class="list-group-item">Crab Pepper Fry <span class=" alignright">150</span></li>
+							    <li class="list-group-item">Fish Poriyal  <span class=" alignright">80</span></li>
+							    <li class="list-group-item">Fish Omlet <span class=" alignright">60</span></li>
+							    <li class="list-group-item">Sura Puttu <span class=" alignright">100</span></li>
+							    <li class="list-group-item">Prawn Curry  <span class=" alignright">130</span></li>
 							</ul>
 					  	</div>
 					</div>
